# arena2036-Assistant

./: README.md  arena_data_stats.txt  create_vectorstore_en.py  main.py  pyproject.toml  scrape_arena_en.py  trie_utils.py
frontend/: index.html  script.js  styles.css
